less/_settings.less
@layout-width:          768px;

@header-background:     #0099FF;
@header-color-main:     #EBEBE7;
@header-color-strong:   #FFF;

@header-pre-background: #FFF;
@header-pre-color:      #0099FF;

@button-main-background:        #00568F;
@button-main-border:            #00426E;
@button-main-color:             #FFFFFF;

@button-secondary-background:   #4C4C4C;
@button-secondary-border:       #101213;
@button-secondary-color:        #FFFFFF;

@section-main-background:       #EBEBE7;

@footer-background:             #666665;
@footer-color-main:             #FFFFFF;


@margin:                 20px;
@button-height:          50px;
@button-border-width:    4px;
@button-font-size:       20px;

